# multi_robot_trainer

./: .gitignore  LICENSE  README.md
mrt_msgs/: CMakeLists.txt  package.xml
mrt_msgs/msg/: Layers.msg
mrt_msgs/srv/: Gradients.srv  Weights.srv
mrt_server/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mrt_server/config/: template.yaml
mrt_server/launch/: server_async.launch.py  server_async_dual.launch.py  server_sync.launch.py  server_sync_dual.launch.py  test.launch.py  test_model.launch.py
mrt_server/mrt_server/: async.py  async_dual.py  sync.py  sync_dual.py
mrt_server/mrt_server/policy/: actor_critic.py  ddqn.py  dqn.py  models.py  reinforce.py
mrt_server/mrt_server/utils/: parameters.py
mrt_worker/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mrt_worker/config/: template.yaml
mrt_worker/launch/: worker_async.launch.py  worker_async_dual.launch.py  worker_sync.launch.py  worker_sync_dual.launch.py
mrt_worker/mrt_worker/: async.py  async_dual.py  base.py  sync.py  sync_dual.py  test.py
mrt_worker/mrt_worker/policy/: actor_critic.py  ddqn.py  dqn.py  models.py  reinforce.py
mrt_worker/mrt_worker/utils/: database.py  parameters.py
