<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrt_server</name>
  <version>0.0.1</version>
  <description>
    Server package for training robots. Sends weights and receives gradients.
  </description>
  <maintainer email="zahi@solrobotics.com">zmk5</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mrt_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python-tensorflow-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
